[tool.poetry]
name = "ctff"
version = "0.3.3"
description = "A Framework for building CTFs."
authors = ["Dan Trickey <dan@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/ctff"
homepage = "https://github.com/trickeydan/ctff"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2"
mistune = "^3"
python-slugify = "^8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
extend-ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
]